# AnkiLive

./: .gitignore  README.md  main.py  pyproject.toml
src/: anki_card_repository.py  orchestrator.py
src/screenshot/: gnome_screenshot_client.py  screenshot_client.py
src/ui/: __init__.py  deck_name_dialog.py  input_dialog.py
